--- a/src/libs/utils/Utils.vcxproj.filters
+++ b/src/libs/utils/Utils.vcxproj.filters
@@ -23,6 +23,22 @@
       <Extensions>moc;h;cpp</Extensions>
       <SourceControlFiles>False</SourceControlFiles>
     </Filter>
+    <Filter Include="Generated Files\Debug">
+      <UniqueIdentifier>{2c76225a-234e-424e-bb2f-5686ea6d52b4}</UniqueIdentifier>
+      <Extensions>cpp;moc</Extensions>
+      <SourceControlFiles>False</SourceControlFiles>
+    </Filter>
+    <Filter Include="Generated Files\Release">
+      <UniqueIdentifier>{349fe768-d638-4862-a441-659d81d50ee2}</UniqueIdentifier>
+      <Extensions>cpp;moc</Extensions>
+      <SourceControlFiles>False</SourceControlFiles>
+    </Filter>
+    <Filter Include="Header Files\ActionManager">
+      <UniqueIdentifier>{db7b6a27-7cde-4afc-8d50-261fe0776519}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\ActionManager">
+      <UniqueIdentifier>{059ae300-382b-4b14-bf50-4b51e29a46f2}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils_global.h">
@@ -31,10 +47,39 @@
     <ClInclude Include="hostosinfo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="id.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="algorithm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="qtcassert.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="hostosinfo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="id.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="qtcassert.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_ActionManager.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_ActionManager.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
+    <ClCompile Include="ActionManager\ActionManager.cpp">
+      <Filter>Source Files\ActionManager</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="ActionManager\ActionManager.h">
+      <Filter>Header Files\ActionManager</Filter>
+    </CustomBuild>
   </ItemGroup>
 </Project>
